<resources>
    <string name="my_app_name">Мой ребенок</string>

    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="permissible_values_login">qwertyuiopasdfghjklzxcvbnm1234567890</string>
    <string name="password_letters_error">Пароль должен иметь хотя бы одну цифру, заглавную и строчную буквы латинского алфавита</string>
    <string name="not_equals_passwords_error">Пароли не совпадают</string>
    <string name="user_exists_with_login">Пользователь с таким Login уже существует</string>

    <string name="login_min_length_error">Минимальное допустимое число символов 4</string>
    <string name="pass_min_length_error">Минимальное допустимое число символов 6</string>
    <string name="check_username">Проверьте правильность ввода иммени пользователя</string>
    <string name="check_password">Проверьте правильность ввода пароля</string>
    <string name="home">Домашняя</string>
    <string name="chat">Чат</string>
    <string name="settings">Настройки</string>
    <string name="photos">Фото</string>
    <string name="homework">Домашняя работа</string>
    <string name="profile_name_template">%s %s</string>
    <string name="profile">Профиль</string>
    <string name="diary">Дневник</string>
    <string name="class_list">Список класса</string>
    <string name="profile_logout">ЛОГАУТ</string>
    <string name="add_homework">Добавить домашнее задание</string>
    <string name="subject_name">Название предмета</string>
    <string name="subject_description">Описание</string>
    <string name="empty_field">Заполните поле</string>
    <string name="time_template">%d:%s</string>
    <string name="all">Норма</string>
    <string name="most">Половина</string>
    <string name="some">Мало</string>
    <string name="no_baby_diary">Дневник не заполнен</string>
    <string name="pill">Таблетки</string>
    <string name="not_administered">Не назначено</string>
    <string name="administered">Назначено</string>
    <string name="pickup">Увоз</string>

    <string-array name="cal">
        <item>Жидкий</item>
        <item>Обычный</item>
        <item>Твердый</item>
    </string-array>

</resources>
