<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/family"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="Parent1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

            <LinearLayout
                android:id="@+id/nav_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_name">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_home">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="Дневник"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_home">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pickup"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_pickup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/chat"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_chat">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/homework"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_homework">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/pill"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_medicine">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/photos"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_photos">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_list_childrens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_profile">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/class_list"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_item"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_list_childrens">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/settings"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>